--- a/index.css
+++ b/index.css
@@ -8,6 +8,33 @@
   display: flex;
 }
 
-ul {
-  list-style: none;
+ul  {
+  list-style: square;
+}
+
+a
+{
+target-name:new;
+target-new:tab;
+}
+
+img {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 150px;
+}
+
+button {
+  background-color: #4CAF50; /* Green */
+  border-color: orange;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: flex;
+  font-size: 16px;
+  border-radius: 8px;
+  justify-content: center;
+
 }
